# Smart-Doc

./: .env.example  .gitignore  Memory_Manager.py  Presentation.pptx  QuestionAnswering.py  RAG.py  RAG2.py  RAG_test.py  README.md  SlideGeneration.py  agent_mem.py  api_inspect.json  batch_test.py  docker-compose.prod.yml  docker-compose.yml  download.py  download_models.py  environment.yml  how to clone.md  how to run  how_to_install.txt  how_to_run.txt  layouts.pptx  main.py  package.json  pyproject.toml  requirements.txt  slides.md  tempCodeRunnerFile.py  test-mem-with-llm.ipynb  wipe_server.sh  worker_inspect.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task-request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  layouts.pptx  package-lock.json  requirements.txt
backend/templates/: index.html
backend/tests/: visualization_test.py
chroma_db/: chroma.sqlite3
chromadb_storage/: chroma.sqlite3
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  eslint.config.js  firebase-applet-config.json  index.html  metadata.json  nginx.conf  package-lock.json  package.json  vite.config.ts
llm_as_judge/: evaluate_qa.py  evaluate_slides.py  evaluate_summary_pipeline.py  evaluate_visualization_figurebench.py
python/: .env  .env.example  Presentation.pptx  models_download_script.py  requirements.txt
retrieval_service/: Dockerfile  download_models.py  requirements.txt  test_clip.py  test_query.py
templates/: index.html
tests/: output.txt  visualization_test.py  visulization_test.py
(+189 files in other folders)
