[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-doc"
version = "0.1.0"
description = "Multimodal document summarization, question answering, visualization, and slide generation."
authors = [{name = "Smart-Doc Team"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
